# TechProject

./: .travis.yml  CMakeLists.txt  README.md
docs/: GitVisProgress.txt
example/: CMakeLists.txt  Source.cpp
include/: json.hpp  testclass.hpp
sources/: CMakeLists.txt  testclass.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
